--- a/compose.yaml
+++ b/compose.yaml
@@ -20,6 +20,8 @@ services:
       - MYSQL_DATABASE=example
       - MYSQL_ROOT_PASSWORD_FILE=/run/secrets/db-password
     restart: always
+    ports:
+      - 3307:3306
     healthcheck:
       test: ["CMD", "mysqladmin", "ping", "-h", "127.0.0.1", "--silent"]
       interval: 3s
