--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -10,3 +10,6 @@ spring.datasource.initialization-mode=always
 spring.datasource.initialize=true
 spring.datasource.schema=classpath:/schema.sql
 spring.datasource.continue-on-error=true
+
+management.endpoint.health.probes.enabled=true
+management.endpoint.health.group.readiness.include=readinessState,customCheck
